--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="loading">Loading</string>
     <string name="welcome_text">Welcome to MPC Wallet</string>
+    <string name="alert">Alert</string>
+    <string name="no_internet">Please check your internet connection</string>
 
     <string name="login">Login</string>
     <string name="import_wallet">Import your wallet from secret phrase</string>
@@ -15,6 +17,8 @@
 
     <string name="next">NEXT</string>
     <string name="done">DONE</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
     <string name="unlock">UNLOCK</string>
     <string name="skip">Skip</string>
     <string name="wallet_setup">WALLET SETUP</string>
@@ -29,7 +33,7 @@
     <string name="new_password">New password <font color='#FF0000'>*</font></string>
     <string name="enter_new_password">Enter new password</string>
     <string name="enter_confirm_password">Confirm password</string>
-    <string name="pass_suggestion_msg">Password must be atleast  8 characters, 1 upper, 1 lower, 1 special and 1 numeric characters </string>
+    <string name="pass_suggestion_msg">Password must be at least 8 characters, It includes 1 uppercase, 1 lowercase, 1 special character and 1 numeric character</string>
     <string name="unique_id_suggestion_msg">if you are already a part of CIFDAQ family then you would have received a Unique ID in the email</string>
     <string name="otp_timer">OTP expires in: </string>
     <string name="email">Email Address <font color='#FF0000'>*</font></string>
@@ -51,7 +55,8 @@
     <string name="enter_phrase_title">Enter your 12 words recovery phrase</string>
     <string name="please_enter_phrase">Please enter your 12 words recovery phrase</string>
     <string name="user_not_found_by_phrase_msg">Please enter the correct seed phrase or user not yet registered</string>
-    <string name="secret_recovery_msg">Please copy the secret recovery phrase in a safe place.This will be required for account recovery.</string>
+    <string name="secret_recovery_desc">Please copy the secret recovery phrase in a safe place. This will be required for account recovery.</string>
+    <string name="enter_secret_recovery_desc">Please enter your 12 words secret recovery phrase in the below text boxes.</string>
     <string name="copy_to_clipboard">Copy To Clipboard</string>
     <string name="congratulation_title">Congratulations ! Your Crypto Wallet is Ready !</string>
     <string name="congratulation_desc">Thank you for choosing CIFDAQ Wallet as your trusted companion to secure your digital assets.</string>
@@ -64,15 +69,15 @@
     <string name="recieve">Receive</string>
     <string name="recieve_desc">To receive crypto from other persons</string>
     <string name="skip_to_login_message">Want to use any feature in the application please follow the action below</string>
-    <string name="receive_transaction">Receive Transaction</string>
+    <string name="receive_transaction">Receive CIFD</string>
     <string name="show_qr_desc">Give your QR code or Wallet address to receive transaction</string>
     <string name="address_title">Address:</string>
-    <string name="send_transaction">Send Transaction</string>
+    <string name="send_transaction">Send CIFD</string>
     <string name="send_transaction_desc">Enter recipient account address and transaction amount to send transaction</string>
     <string name="sender_address">Sender Address</string>
-    <string name="receiver_address">Receiver Address <font color='#FF0000'>*</font></string>
+    <string name="receiver_address">Receiver Address<font color='#FF0000'>*</font></string>
     <string name="enter_recipient_address_hint">Enter recipient account address</string>
-    <string name="amount">Amount <font color='#FF0000'>*</font></string>
+    <string name="amount">Amount(in CIFD)<font color='#FF0000'>*</font></string>
     <string name="sent_amount_hint">Enter amount here</string>
     <string name="gas">Gas</string>
     <string name="gas_limit">Gas Limit</string>
@@ -85,6 +90,12 @@
     <string name="account">Accounts</string>
     <string name="create_new_account">Create a new account</string>
     <string name="not_another_account">You dont have another account so please create a new account</string>
+    <string name="password_not_valid">Password is not valid</string>
+    <string name="pass_confirm_pass_not_matching">Password and Confirm Password are not matching</string>
+
+    <string name="your_receiver_address_wrong">Your receiver address is wrong</string>
+    <string name="you_cant_transfer_own_account">You can not transfer token into your own account</string>
+    <string name="you_cant_transfer_zero_value">You can not send transaction amount 0</string>
 
 
 </resources>
